Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-961

Crash when opening invalid .qml file in Design mode

XMLWordPrintable

    • aa78a1fc5df11cfd0c32847b97160bf6640932b6

      How to reproduce

      • Open tests/manual/qml/testfiles/helloworld.qml
      • Go to Design mode
      • Add "X" after last "}" in file
      • Go to Design mode -> ASSERT: "ok" in file /src/plugins/qmldesigner/core/filemanager/objectlengthcalculator.cpp, line 44

      Stacktrace

      #0  0x00a4b422 in __kernel_vsyscall ()
      #1  0x00aaa4d1 in *__GI_raise (sig=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
      #2  0x00aad932 in *__GI_abort () at abort.c:92
      #3  0x00560703 in qt_message_output (msgType=QtFatalMsg, buf=0xbc56d28 "ASSERT: \"ok\" in file /home/kkoehne/dev/creator/src/plugins/qmldesigner/core/filemanager/objectlengthcalculator.cpp, line 44")
          at global/qglobal.cpp:2253
      #4  0x005608fc in qt_message (msgType=QtFatalMsg, msg=0x70c568 "ASSERT: \"%s\" in file %s, line %d", ap=0xbfb749b4 "\022)#\003\264(#\003,") at global/qglobal.cpp:2299
      #5  0x00560d1a in qFatal (msg=0x70c568 "ASSERT: \"%s\" in file %s, line %d") at global/qglobal.cpp:2482
      #6  0x0056029c in qt_assert (assertion=0x3232912 "ok", file=0x32328b4 "/home/kkoehne/dev/creator/src/plugins/qmldesigner/core/filemanager/objectlengthcalculator.cpp", line=44) at global/qglobal.cpp:2016
      #7  0x03064499 in ObjectLengthCalculator (this=0xbfb74a28, text=...) at /home/kkoehne/dev/creator/src/plugins/qmldesigner/core/filemanager/objectlengthcalculator.cpp:44
      #8  0x030727ec in QmlDesigner::RewriterView::nodeLength (this=0xa5610800, node=...) at /home/kkoehne/dev/creator/src/plugins/qmldesigner/core/model/rewriterview.cpp:482
      #9  0x0321cdbd in QmlDesigner::Internal::DesignModeWidget::nodeForPosition (this=0xb2e199e0, cursorPos=133) at designmodewidget.cpp:643
      #10 0x0321b116 in QmlDesigner::Internal::DesignModeWidget::setAutoSynchronization (this=0xb2e199e0, sync=true) at designmodewidget.cpp:398
      #11 0x0321b742 in QmlDesigner::Internal::DesignModeWidget::setCurrentDocument (this=0xb2e199e0, newDesignDocumentController=0x9f047d8) at designmodewidget.cpp:467
      #12 0x0321a2f9 in QmlDesigner::Internal::DesignModeWidget::showEditor (this=0xb2e199e0, editor=0xb478a40) at designmodewidget.cpp:194
      #13 0x03216374 in QmlDesigner::Internal::BauhausPlugin::modeChanged (this=0x9d024f8, mode=0x9d29e70) at /home/kkoehne/dev/creator/src/plugins/qmldesigner/qmldesignerplugin.cpp:248
      #14 0x03230aae in QmlDesigner::Internal::BauhausPlugin::qt_metacall (this=0x9d024f8, _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0xbfb74dc4)
          at /home/kkoehne/dev/creator/src/plugins/qmldesigner/.moc/debug-shared/moc_qmldesignerplugin.cpp:87
      #15 0x00690fd2 in QMetaObject::metacall (object=0x9d024f8, cl=QMetaObject::InvokeMetaMethod, idx=8, argv=0xbfb74dc4) at /home/kkoehne/dev/qt/qt-qml/src/corelib/kernel/qmetaobject.cpp:237
      #16 0x006a6085 in QMetaObject::activate (sender=0x9c09308, m=0x1fcc6e4, local_signal_index=1, argv=0xbfb74dc4) at /home/kkoehne/dev/qt/qt-qml/src/corelib/kernel/qobject.cpp:3304
      #17 0x01f456d1 in Core::ModeManager::currentModeChanged (this=0x9c09308, _t1=0x9d29e70, _t2=0x9b118a8) at .moc/debug-shared/moc_modemanager.cpp:122
      #18 0x01f03446 in Core::ModeManager::currentTabChanged (this=0x9c09308, index=2) at modemanager.cpp:281
      #19 0x01f45602 in Core::ModeManager::qt_metacall (this=0x9c09308, _c=QMetaObject::InvokeMetaMethod, _id=8, _a=0xbfb74f18) at .moc/debug-shared/moc_modemanager.cpp:101
      #20 0x00690fd2 in QMetaObject::metacall (object=0x9c09308, cl=QMetaObject::InvokeMetaMethod, idx=12, argv=0xbfb74f18) at /home/kkoehne/dev/qt/qt-qml/src/corelib/kernel/qmetaobject.cpp:237
      #21 0x006a6085 in QMetaObject::activate (sender=0x9c1ea00, m=0x1fc9960, local_signal_index=1, argv=0xbfb74f18) at /home/kkoehne/dev/qt/qt-qml/src/corelib/kernel/qobject.cpp:3304
      #22 0x01f3cd60 in Core::Internal::FancyTabWidget::currentChanged (this=0x9c1ea00, _t1=2) at /home/kkoehne/dev/creator/src/plugins/coreplugin/.moc/debug-shared/moc_fancytabwidget.cpp:252
      #23 0x01e88201 in Core::Internal::FancyTabWidget::showWidget (this=0x9c1ea00, index=2) at fancytabwidget.cpp:498
      #24 0x01f3ccb8 in Core::Internal::FancyTabWidget::qt_metacall (this=0x9c1ea00, _c=QMetaObject::InvokeMetaMethod, _id=3, _a=0xbfb75048)
          at /home/kkoehne/dev/creator/src/plugins/coreplugin/.moc/debug-shared/moc_fancytabwidget.cpp:233
      #25 0x00690fd2 in QMetaObject::metacall (object=0x9c1ea00, cl=QMetaObject::InvokeMetaMethod, idx=30, argv=0xbfb75048) at /home/kkoehne/dev/qt/qt-qml/src/corelib/kernel/qmetaobject.cpp:237
      #26 0x006a6085 in QMetaObject::activate (sender=0x9c10b40, m=0x1fc9950, local_signal_index=0, argv=0xbfb75048) at /home/kkoehne/dev/qt/qt-qml/src/corelib/kernel/qobject.cpp:3304
      #27 0x01f3cb40 in Core::Internal::FancyTabBar::currentChanged (this=0x9c10b40, _t1=2) at /home/kkoehne/dev/creator/src/plugins/coreplugin/.moc/debug-shared/moc_fancytabwidget.cpp:169
      #28 0x01e85ae3 in Core::Internal::FancyTabBar::emitCurrentIndex (this=0x9c10b40) at fancytabwidget.cpp:213
      #29 0x01f3cae8 in Core::Internal::FancyTabBar::qt_metacall (this=0x9c10b40, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0xbfb75128)
          at /home/kkoehne/dev/creator/src/plugins/coreplugin/.moc/debug-shared/moc_fancytabwidget.cpp:157
      #30 0x00690fd2 in QMetaObject::metacall (object=0x9c10b40, cl=QMetaObject::InvokeMetaMethod, idx=28, argv=0xbfb75128) at /home/kkoehne/dev/qt/qt-qml/src/corelib/kernel/qmetaobject.cpp:237
      #31 0x006a6085 in QMetaObject::activate (sender=0x9c10b70, m=0x80a584, local_signal_index=0, argv=0x0) at /home/kkoehne/dev/qt/qt-qml/src/corelib/kernel/qobject.cpp:3304
      #32 0x00708bc7 in QTimer::timeout (this=0x9c10b70) at /home/kkoehne/dev/qt/qt-qml/src/corelib/.moc/debug-shared/moc_qtimer.cpp:134
      #33 0x006aeec4 in QTimer::timerEvent (this=0x9c10b70, e=0xbfb75674) at kernel/qtimer.cpp:271
      #34 0x006a200a in QObject::event (this=0x9c10b70, e=0xbfb75674) at /home/kkoehne/dev/qt/qt-qml/src/corelib/kernel/qobject.cpp:1207
      #35 0x010f069c in QApplicationPrivate::notify_helper (this=0x9ac29c8, receiver=0x9c10b70, e=0xbfb75674) at /home/kkoehne/dev/qt/qt-qml/src/gui/kernel/qapplication.cpp:4341
      #36 0x010edef2 in QApplication::notify (this=0xbfb75a1c, receiver=0x9c10b70, e=0xbfb75674) at /home/kkoehne/dev/qt/qt-qml/src/gui/kernel/qapplication.cpp:3745
      #37 0x0068918b in QCoreApplication::notifyInternal (this=0xbfb75a1c, receiver=0x9c10b70, event=0xbfb75674) at kernel/qcoreapplication.cpp:704
      #38 0x010e0467 in QCoreApplication::sendEvent (receiver=0x9c10b70, event=0xbfb75674) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
      #39 0x006c6094 in QTimerInfoList::activateTimers (this=0x9acba8c) at kernel/qeventdispatcher_unix.cpp:602
      #40 0x006c1cac in timerSourceDispatch (source=0x9acba58) at kernel/qeventdispatcher_glib.cpp:184
      #41 0x00887e88 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
      #42 0x0088b730 in ?? () from /lib/libglib-2.0.so.0
      #43 0x0088b863 in g_main_context_iteration () from /lib/libglib-2.0.so.0
      #44 0x006c2e58 in QEventDispatcherGlib::processEvents (this=0x9ac8e30, flags=...) at kernel/qeventdispatcher_glib.cpp:412
      #45 0x011cad66 in QGuiEventDispatcherGlib::processEvents (this=0x9ac8e30, flags=...) at /home/kkoehne/dev/qt/qt-qml/src/gui/kernel/qguieventdispatcher_glib.cpp:204
      #46 0x00686567 in QEventLoop::processEvents (this=0xbfb7593c, flags=...) at /home/kkoehne/dev/qt/qt-qml/src/corelib/kernel/qeventloop.cpp:149
      #47 0x006866ac in QEventLoop::exec (this=0xbfb7593c, flags=...) at /home/kkoehne/dev/qt/qt-qml/src/corelib/kernel/qeventloop.cpp:201
      #48 0x0068987d in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
      #49 0x010edb48 in QApplication::exec () at /home/kkoehne/dev/qt/qt-qml/src/gui/kernel/qapplication.cpp:3620
      #50 0x080518b7 in main (argc=2, argv=0xbfb75d04) at main.cpp:318
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            erikv Erik Verbruggen
            kkohne Kai Köhne
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes