Fixed ObjectLengthCalculator to handle incorrect QML.

Task-number: QTCREATORBUG-961